--- a/app/views/customers.twig
+++ b/app/views/customers.twig
@@ -25,7 +25,7 @@
                     <a class="nav-link active" href="/api/customers">Customers REST</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/users">Customers DB</a>
+                    <a class="nav-link active" href="/customers">Customers DB</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/contact">Contact</a>
@@ -41,11 +41,11 @@
             <div class="card mt-4">
                 <div class="card-header">
                     <h4>Customer Details
-                        <a class="btn btn-primary float-end" href="/create">Add customer</a>
+                        <a class="btn btn-primary float-end" href="/customers/create">Add customer</a>
                     </h4>
                 </div>
                 <div class="card-body">
-                    <form action="/delete" method="post">
+                    <form action="/customers/delete" method="post">
                         <div class="table-responsive">
                             <table class="table table-bordered table-striped">
                                 <thead>
@@ -75,7 +75,8 @@
                                     <td>{{ param.status }}</td>
                                     <td>{{ param.gender }}</td>
                                     <td>
-                                        <a href="/edit?id={{ param.id }}" class="btn btn-primary">EDIT</a>
+                                        <a href="/customer/edit?id={{ param.id }}" class="btn btn-primary">EDIT</a>
+                                        <a href="/customer?id={{ param.id }}" class="btn btn-info">SHOW</a>
                                 </tr>
                                 {% endfor %}
                                 </tbody>
